syntax = "proto3";
package bitcoin;

option go_package = "github.com/zeta-chain/node/common/bitcoin";

message Proof {
  bytes tx_bytes = 1;
  bytes path = 2;
  uint32 index = 3;
}
